--- a/app/src/main/res/layout/activity_acc.xml
+++ b/app/src/main/res/layout/activity_acc.xml
@@ -1,50 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lenovo.cardlessatm.AccActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <LinearLayout
+    <include
+        layout="@layout/app_bar_acc"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent" />
 
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_acc"
+        app:menu="@menu/activity_acc_drawer" />
 
-
-        <TextView
-            android:id="@+id/banner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#2196F3"
-
-            android:paddingTop="42dp"
-            android:text="Accounts"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="30sp" />
-        <TextView
-            android:id="@+id/desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="#2196F3"
-            android:paddingBottom="42dp"
-            android:text="Select an Account to Withdraw Money."
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="18sp" />
-
-
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/myRecycleView">
-        </android.support.v7.widget.RecyclerView>
-
-
-    </LinearLayout>
-
-
-
-</ScrollView>
+</android.support.v4.widget.DrawerLayout>
