--- a/app/src/main/res/layout/activity_amt_pin.xml
+++ b/app/src/main/res/layout/activity_amt_pin.xml
@@ -8,105 +8,136 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="187dp"
-        android:layout_height="158dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="178dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/enter_pin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/acc" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="104dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="352dp"
+        android:layout_height="273dp"
+        android:layout_marginBottom="28dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginTop="19dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_proceed"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/card" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.517"
+        app:srcCompat="@drawable/cardtwo" />
 
     <TextView
         android:id="@+id/acc_no"
-        android:layout_width="187dp"
-        android:layout_height="24dp"
-        android:layout_marginBottom="52dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="267dp"
+        android:layout_height="31dp"
+        android:layout_marginBottom="234dp"
+        android:layout_marginStart="32dp"
         android:text="TextView"
-        android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/balance"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.403"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.871" />
 
     <TextView
         android:id="@+id/balance"
-        android:layout_width="113dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="56dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="274dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="198dp"
         android:text="TextView"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        app:layout_constraintBottom_toBottomOf="@+id/enter_amt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.286"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:visibility="gone"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/acc_no"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/enter_amt"
-        android:layout_width="124dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="116dp"
+        android:layout_width="132dp"
+        android:layout_height="36dp"
+
+
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/back"
         android:ems="10"
         android:hint="Enter Amount"
         android:inputType="textPersonName"
         android:lineSpacingExtra="10sp"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/enter_pin"
-        app:layout_constraintHorizontal_bias="0.837"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/enter_pin"
+        app:layout_constraintEnd_toEndOf="@+id/enter_pin"
+        app:layout_constraintHorizontal_bias="0.026"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/enter_pin"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/enter_pin"
-        android:layout_width="102dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="116dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginRight="68dp"
+        android:layout_width="139dp"
+        android:layout_height="36dp"
+        android:layout_marginBottom="135dp"
+        android:layout_marginEnd="56dp"
+        android:background="@drawable/back"
         android:ems="10"
-        android:hint="Pin"
+        android:hint="Enter Pin"
+
         android:inputType="textPersonName"
-        android:textSize="14sp"
+        android:textAlignment="center"
+
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/back"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/button_proceed"
-        android:layout_width="90dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginStart="8dp"
-        android:text="Proceed"
-        android:textColor="#2196F3"
         style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginStart="140dp"
+        android:text="Proceed"
+        android:visibility="gone"
+        android:textColor="#2196F3"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/tick"
+
+        android:layout_width="32dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+
+
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/tick2"
+        app:layout_constraintBottom_toBottomOf="@+id/enter_pin"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/enter_pin"
+        app:layout_constraintTop_toTopOf="@+id/enter_pin"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
