--- a/app/src/main/res/layout/activity_selectmethod.xml
+++ b/app/src/main/res/layout/activity_selectmethod.xml
@@ -59,7 +59,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Select Account Type"
-        android:textColor="#ff000000"
+        android:textColor="#2196F3"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,22 +71,23 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="282dp"
-        android:layout_height="74dp"
+        android:layout_width="342dp"
+        android:layout_height="99dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:gravity="center"
         android:text="How would you like to withdraw the amount?"
-        android:textColor="#ff000000"
+        android:textColor="#000000"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.444"
+        app:layout_constraintVertical_bias="0.4"
         tools:ignore="MissingConstraints" />
+
 
 
     <Button
