--- a/app/src/main/res/layout/activity_transaction_receipts.xml
+++ b/app/src/main/res/layout/activity_transaction_receipts.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hp.nfcsend.TransactionReceipts">
+    tools:context="com.example.lenovo.cardlessatm.TransactionReceipts">
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="142dp"
-        android:layout_height="84dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="29dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewRs"
+        android:layout_width="179dp"
+        android:layout_height="101dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="102dp"
+        android:layout_marginStart="103dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewRs"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,27 +22,34 @@
 
     <TextView
         android:id="@+id/textViewRs"
-        android:layout_width="123dp"
-        android:layout_height="59dp"
+        android:layout_width="212dp"
+        android:layout_height="49dp"
         android:layout_marginBottom="21dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginStart="99dp"
         android:layout_marginTop="104dp"
         android:text="TextView"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="22dp"
-        android:text="Payment Successful"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="@+id/textViewRs"
+        android:layout_width="233dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginStart="71dp"
+        android:text="Transaction Successful"
+        android:textAlignment="center"
+        android:textColor="#2196F3"
+        android:textSize="18sp"
+        android:typeface="sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewRs" />
 
     <TextView
@@ -48,30 +57,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="19dp"
+        android:layout_marginEnd="59dp"
         android:text="Your transaction has been successfully completed!"
         app:layout_constraintBottom_toTopOf="@+id/textView9"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_width="357dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="7dp"
         android:text="TRANSACTION DETAILS"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#2186F3"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="356dp"
+        android:layout_height="15dp"
         android:layout_marginBottom="167dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="274dp"
+        android:background="#F8F8F8"
         app:layout_constraintBottom_toTopOf="@+id/buttonGo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,8 +134,8 @@
 
     <TextView
         android:id="@+id/textViewDAcc"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="122dp"
+        android:layout_height="36dp"
         android:layout_marginBottom="11dp"
         android:layout_marginEnd="28dp"
         android:text="TextView"
@@ -179,14 +196,14 @@
 
     <Button
         android:id="@+id/buttonGo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="7dp"
+        android:layout_width="426dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="23dp"
         android:background="@drawable/buttonotp"
         android:text="Go To Home "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
 </android.support.constraint.ConstraintLayout>
